css/main.css
/* ... */
.social-flex-container {
  display: flex;
  flex-direction: row;
  font-size: 3rem;
  justify-content: space-evenly;
  list-style-type: none;
}

.creator-name {
  color: #F9F9F9;
  font-size: 1.2rem;
  font-weight: 400;
  padding: 3rem 0;
  text-align: center;
}

/* -------------BUTTONS--------------- */
/* -------------BUTTONS--------------- */
/* -------------BUTTONS--------------- */

.btn { 
    cursor: pointer;
    position: relative;
    width: 100%;
}

.ptbutton {
    background-color: #9B0656;
    display: block;
    font-family: 'open sans', sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
    height: 5rem;
    margin: 0 auto 5rem auto;
    padding: 1.4rem 0;
    text-align: center;
    text-decoration: none;
    width: 26rem;
}

.btn-white { 
    border: 3px solid #9B0656; 
    border-radius: 5rem;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    color:#F9F9F9; 
}

.btn-white:hover, .btn-white:active, .btn-white:focus  {
    background-color: transparent;
    border: 3px solid #9B0656;
    color: #9B0656;
    -webkit-transition: 0.5s ease-in-out;
    -moz-transition: 0.5s ease-in-out;
    transition: 0.5s ease-in-out;
}

/* Case Study Buttons */

.csbutton {
  background-color: #F9F9F9;
  display: block;
  font-family: 'open sans', sans-serif;
  font-size: 1.6rem;
  font-weight: 600;
  height: 5rem;
  margin: 0 auto 5rem auto;
  text-align: center;
  text-decoration: none;
  padding: 1.4rem 0;
  width: 26rem;
}

.btn-magenta { 
  color:#9B0656;
  border: 3px solid #9B0656; 
  border-radius: 5rem;
   
}

.btn-magenta:hover, .btn-magenta:active, .btn-magenta:focus  {
  background-color: #9B0656;
  border: 3px solid #9B0656;
  color: #F9F9F9;
  -webkit-transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

/* ----------------------HOMEPAGE--------------------------- */
/* ----------------------HOMEPAGE--------------------------- */
/* ----------------------HOMEPAGE--------------------------- */

.showcase {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.showcase .inner {
    background-color: #1F3948;
    color: #F9F9F9;
    margin-top: 12rem;
    padding: 5rem 5rem 5rem 3rem;
    position: relative;
    width: 100%;
    z-index: 2;
}

h1 {
  width: 80%;
}

h1 > .announce {
    color: #E7AFB8;
    line-height: 130%;
}

.inner > .slogan-homepage {
    margin-top: 3rem;
}

.container-showcase-bg {
    margin: 0 auto;
    object-position: 100% 0;
    overflow: hidden;
    position: absolute;
    top: -4rem;
    width: 100%;
    z-index: 1;
}

.container-showcase-bg .background-large {
   display: block;
   object-fit: cover;
}

.container-arrow {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    top: 15rem;
    position: relative;
    z-index: 2;
}

.container-arrow > p {
    color: #1F3948;
    font-size: 1.4rem;
    font-weight: 700;
    line-height: normal;
    padding-bottom: 1rem;
    text-align: center;
}

.bounce {
  -moz-animation: bounce 3s infinite;
	-webkit-animation: bounce 3s infinite;
	animation: bounce 3s infinite;    
}

@-moz-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@-webkit-keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -moz-transform: translateY(-30px);
    -ms-transform: translateY(-30px);
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  60% {
    -moz-transform: translateY(-15px);
    -ms-transform: translateY(-15px);
    -webkit-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}

/* Projects */

#projects {
    background-color: #91B7CF;
    display: flex;
    flex-direction: column;
    margin: 18rem auto 0 auto;
}

.project-image1 {
    padding: 5rem 3rem 5rem 3rem;
    margin: 0 auto;
}

.hp-solution {
    width: 100%;
    height: auto;
}

.project-title {
    height: auto;
    padding: 0 4.8rem 1.2rem 3rem;
    width: auto;
}

.project-title > h2 {
    color: #02547B;
}

.project-descrp {
    height: auto;
    width: 100%;
    padding: 1rem 3rem 4.3rem 3rem;
}

.project-descrp > p {
    color: #1F3948;
}

/* -----------------------ABOUT------------------------- */
/* -----------------------ABOUT------------------------- */
/* -----------------------ABOUT------------------------- */

.bio {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas:
    "bio"
    "essay";
}

.box {
    background-color: #1F3948;
}

/* Hero Section */

.hero-wrap {
    color: #F9F9F9;
    display: flex;
    flex-direction: column;
    margin-top: 12rem;
    overflow: hidden;
    position: relative;
    z-index: 2;
}

.mobile-dots  {
    overflow: hidden;
    position: absolute;
    top: 85rem;
    max-width: 100%;
    max-height: auto;
    z-index: 1;  
}

.background-mobile {
  overflow: hidden;
}

.hero > h1 {
    color: #E7AFB8;
    line-height: 120%;
    margin: 5rem 0 3rem 0;
    text-align: left;

}

.me {
    max-width: 100%;
    max-height: auto;
    margin: 3.5rem auto 7rem auto;
}

.desktop-me {
  display: none;
}

.arrow {
    margin-bottom: 5rem;
    text-align: center;
}

.emphasis, .aboutme > div > .aboutme-sub {
    color: #91B7CF;
}

/* About Me */

.essay {
    display: flex;
    flex-direction: column;
    margin-top: 5rem;
}
/* ... */

